# IV

./: DOCKER_USER  Dockerfile  README.md  iv.yaml  pyproject.toml  tasks.py
.circleci/: config.yml
.github/workflows/: actualizar_docker.yml  test.yml
docs/: CI.md  ISSUES.md  dependencias.md  dockers.md  eleccion_gestores  eleccion_gestores.md  eleccion_lenguaje.md  objetivo2.md  objetivo4.md  poetry_problems.md  test.md
src/: frecuencia_compra.py  inventario.py  producto.py  venta.py
test/: data.txt  funciones_test.py  test.py  test_estado_almacen.py  test_inventario.py  test_mucho_stock.py  test_poco_stock.py
